--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "d3": "^5.9.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
+  },
+  "devDependencies": {
+    "webpack": "^4.30.0"
   }
 }
