--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "request-promise": "^4.2.4"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "7",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
+    "image-webpack-loader": "^4.6.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
