--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
+    "deploy": "webpack --mode=production && git commit -am \"build and deploy\" && git subtree push --prefix dist origin gh-pages",
     "build": "webpack",
     "start": "webpack-dev-server --open"
   },
