--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "d3": "^5.9.2",
+    "dotenv": "^7.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
@@ -11,6 +12,7 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
+    "firebase-admin": "^7.3.0",
     "image-webpack-loader": "^4.6.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
@@ -20,7 +22,8 @@
   "scripts": {
     "deploy": "webpack --mode=production && git commit -am \"build and deploy\" && git subtree push --prefix dist origin gh-pages",
     "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "scrape": "node scraper/scraper.js"
   },
   "name": "nba-radial-bracket",
   "version": "1.0.0",
