--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -7,6 +7,9 @@ name: CI
 on:
   schedule:
     - cron: "15 4/12 * * *"
+  push:
+    branches:
+      - master
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
