--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Scrape
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -35,11 +35,6 @@ jobs:
           ${{ runner.os }}-build-${{ env.cache-name }}-
           ${{ runner.os }}-build-
           ${{ runner.os }}-
-
-    # Runs a single command using the runners shell
-    - name: Install Deps
-      run: cd functions && npm install && echo Hello, world!
-
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       env:
@@ -47,6 +42,6 @@ jobs:
         FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
         FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
       run: |
-        cd functions
         npm install
+        cd functions
         node scraper/scraper-cli.js
