--- a/functions/package.json
+++ b/functions/package.json
@@ -12,9 +12,10 @@
     "node": "8"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.2.0",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.3.0",
-    "cheerio": "^1.0.0-rc.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
