--- a/functions/package.json
+++ b/functions/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "serve": "firebase serve --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
-  "engines": {
-    "node": "8"
-  },
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "dotenv": "^8.2.0",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.3.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
-  },
-  "private": true
+    "name": "functions",
+    "description": "Used to be Cloud Functions for Firebase",
+    "scripts": {},
+    "engines": {
+        "node": "8"
+    },
+    "dependencies": {
+        "cheerio": "^1.0.0-rc.3",
+        "dotenv": "^8.2.0",
+        "request": "^2.88.0",
+        "request-promise": "^4.2.4"
+    },
+    "private": true
 }
