--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
         "cheerio": "^1.0.0-rc.3",
         "d3": "^5.9.2",
         "dotenv": "^7.0.0",
-        "firebase": "^5.11.0",
         "request": "^2.88.0",
         "request-promise": "^4.2.4"
     },
@@ -12,6 +11,7 @@
         "babel-loader": "7",
         "babel-preset-env": "^1.7.0",
         "css-loader": "^2.1.1",
+        "esbuild": "0.20.2",
         "file-loader": "^3.0.1",
         "firebase-admin": "^7.3.0",
         "image-webpack-loader": "^4.6.0",
@@ -21,14 +21,13 @@
         "webpack-dev-server": "^3.3.1"
     },
     "scripts": {
-        "deploy": "webpack --mode=production && git commit -am \"build and deploy\" && git subtree push --prefix dist origin gh-pages",
-        "build": "webpack",
-        "start": "webpack-dev-server --open",
-        "scrape": "node functions/scraper/scraper-cli.js"
+        "build": "esbuild src/index.js --bundle --loader:.png=file --loader:.svg=file --loader:.jpg=file --loader:.ttf=file --outdir=dist",
+        "start": "esbuild src/index.js --bundle --loader:.png=file --loader:.svg=file --loader:.jpg=file --loader:.ttf=file --outdir=dist --watch --servedir=dist",
+        "scrape": "node functions/scraper/scraper-cli.js 2024"
     },
     "name": "nba-radial-bracket",
-    "version": "1.0.0",
-    "description": "Visualize the playoffs",
+    "version": "2.0.0",
+    "description": "Visualize the NBA playoffs",
     "main": "index.js",
     "author": "Mathew Varughese <mat.varughese3@gmail.com>",
     "license": "MIT"
