--- a/package.json
+++ b/package.json
@@ -7,18 +7,7 @@
         "request-promise": "^4.2.4"
     },
     "devDependencies": {
-        "babel-core": "^6.26.3",
-        "babel-loader": "7",
-        "babel-preset-env": "^1.7.0",
-        "css-loader": "^2.1.1",
-        "esbuild": "0.20.2",
-        "file-loader": "^3.0.1",
-        "firebase-admin": "^7.3.0",
-        "image-webpack-loader": "^4.6.0",
-        "style-loader": "^0.23.1",
-        "webpack": "^4.30.0",
-        "webpack-cli": "^3.3.1",
-        "webpack-dev-server": "^3.3.1"
+        "esbuild": "0.20.2"
     },
     "scripts": {
         "build": "esbuild src/index.js --bundle --loader:.png=file --loader:.svg=file --loader:.jpg=file --loader:.ttf=file --outdir=dist && cp src/index.html dist/index.html",
