--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -20,28 +20,19 @@ jobs:
 
         # Steps represent a sequence of tasks that will be executed as part of the job
         steps:
-            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-            - uses: actions/checkout@v2
-
-            - name: Cache node modules
-              uses: actions/cache@v2
-              env:
-                  cache-name: cache-node-modules
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
               with:
-                  # npm cache files are stored in `~/.npm` on Linux/macOS
-                  path: ~/.npm
-                  key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-                  restore-keys: |
-                      ${{ runner.os }}-build-${{ env.cache-name }}-
-                      ${{ runner.os }}-build-
-                      ${{ runner.os }}-
-            # Runs a set of commands using the runners shell
+                  node-version: 20
+                  cache: "npm"
             - name: Run a multi-line script
-              env:
-                  FIREBASE_PRIVATE_KEY_ID: ${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
-                  FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
-                  FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
               run: |
-                  cd functions
-                  npm install
-                  node scraper/scraper-cli.js 2024
+                  node functions/scraper/scraper-cli.js
+                  git config --local user.email "tyrese@github.com"
+                  git config --local user.name "GitHub Action test"
+                  git add .
+                  git commit -m "Scrape"
+            - name: Push changes # push the output folder to your repo
+              uses: ad-m/github-push-action@master
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
