--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -25,6 +25,8 @@ jobs:
               with:
                   node-version: 20
                   cache: "npm"
+            - name: Install dependencies
+              run: npm install
             - name: Run a multi-line script
               run: |
                   node functions/scraper/scraper-cli.js
