--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -24,9 +24,9 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: 20
-                  cache: "npm"
+                  cache: "yarn"
             - name: Install dependencies
-              run: npm install
+              run: yarn install
             - name: Run a multi-line script
               run: |
                   node functions/scraper/scraper-cli.js
