--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -4,12 +4,11 @@ name: Scrape
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
+# https://crontab.guru/#15_4/12_*_*_*
+# At minute 15 past every 12th hour from 4 through 23.
 on:
     schedule:
         - cron: "15 4/12 * * *"
-    push:
-        branches:
-            - master
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
